--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "form-builder-poc",
+  "name": "formbuilder-models",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Luc Iyer <luciyer@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
